Add Procfile file for heroku

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>genetic</groupId>
     <artifactId>GeneticAlgorithm</artifactId>
     <packaging>war</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <name>GeneticAlgorithm Maven Webapp</name>
 
     <parent>
@@ -24,6 +24,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
         <dependency>
